--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>dbprogramming3</artifactId>
+    <artifactId>dbprogramming1</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -20,5 +20,5 @@
             <version>8.0.32</version>
         </dependency>
     </dependencies>
-
+    <name>dbprogramming1</name>
 </project>
